--- a/src/app/components/page-component/page-component.html
+++ b/src/app/components/page-component/page-component.html
@@ -1,1 +1,2 @@
 <p>page-component works!</p>
+<p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" size="xlarge" shape="circle" />
