--- a/src/app/components/page-component/page-component.html
+++ b/src/app/components/page-component/page-component.html
@@ -1,2 +1,8 @@
-<p>Pagina inicial</p>
-<p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" size="xlarge" shape="circle" />
+<!-- <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" size="xlarge" shape="circle" /> -->
+<mat-toolbar color="primary">
+    <span>Cadastro de Clientes</span>
+    <span class="spacer"></span>
+    <a>Formulário</a>
+    <a>Consulta</a>
+</mat-toolbar>
+<button mat-flat-button>Click me!</button>
