--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,8 @@
+<mat-toolbar color="primary">
+  <span>Cadastro de Clientes</span>
+  <span class="spacer"></span>
+  <a routerLink="/Cadastro">Formulário</a>
+  <a routerLink="/Consulta">Consulta</a>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
