fix: update para correcao de dependencias

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
   <span>Cadastro de Clientes</span>
-  <span class="spacer"></span>
+  <span class="spacer flex row justify-content-between"></span>
   <a routerLink="/Cadastro">Formulário</a>
   <a routerLink="/Consulta">Consulta</a>
 </mat-toolbar>
+
