--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@fontsource/inter';
+@import '@fontsource/inter/500.css';/* peso específico */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "primeicons/primeicons.css";
+@import "primeflex/primeflex.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    font-family: 'Inter', sans-serif;
+    height: 100%;
+    margin: 0%;
+}
