--- a/src/app/components/cadastro/cadastro.html
+++ b/src/app/components/cadastro/cadastro.html
@@ -1,11 +1,2 @@
-<div fxLayout="row" fxLayoutAlign="center">
-    <div fxLayout="column" fxFlex="1000px">
-        <form class="mt-60" #clientesFrm="ngForm">
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-title>Dados Pessoais</mat-card-title>
-                </mat-card-header>
-            </mat-card>
-        </form>
-    </div>
-</div>
+<app-navbar></app-navbar>
+<h3>teste</h3>
