--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,6 +1,5 @@
 <mat-toolbar class="flex align-items-center justify-content-between px-4 py-2 bg-primary text-white">
-  <span class="font-bold text-lg">Cadastro de Clientes</span>
-
+  <a routerLink="/Inicio"><span class="font-bold text-lg">Cadastro de Clientes</span></a>
   <div class="flex gap-3">
     <a routerLink="/Cadastro" class="no-underline text-white hover:text-yellow-300 transition-colors transition-duration-200">
       Formulário
