feat: criando tabela de exibicao dos dados com primeng

--- a/src/app/components/cadastro/cadastro.html
+++ b/src/app/components/cadastro/cadastro.html
@@ -1,4 +1,3 @@
-
 <p-card class="m-4 p-4 flex flex-column gap-4">
   <div class="flex align-items-center gap-2">
     <h3 class="m-0">Formulário de Registro</h3>
@@ -12,7 +11,7 @@
         <i class="pi pi-user"></i>
         Nome do Cliente
       </label>
-      <input id="nome" type="text" pInputText class="w-full" />
+      <input id="nome" type="text" pInputText class="w-full" [(ngModel)]="nome" name="nome"/>
     </div>
 
     <div class="col-12 md:col-6">
@@ -20,11 +19,11 @@
         <i class="pi pi-code"></i>
         Código de Registro
       </label>
-      <input id="codigo" type="text" pInputText class="w-full" />
+      <input id="codigo" type="text" pInputText class="w-full" [(ngModel)]="codigo" name="codigo"/>
     </div>
   </form>
 
   <div class="flex justify-content-end m-3">
-    <p-button label="Registrar" icon="pi pi-check"></p-button>
+    <p-button label="Registrar" icon="pi pi-check" (click)="registrar()"></p-button>
   </div>
 </p-card>
